# civilization

./: CLAUDE.md  Cargo.toml  README.md  TRADE_UI_PROGRESS.md  bacon.toml  build.rs  cards-and-calamities.md  civ_cards.md  log.txt  moonshine-save.md  savegame.json  savegame.ron
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
.windsurf/workflows/: bevy-reference.md
assets/definitions/: civilization.cards  civilization.cards.ron  definitions.cards  definitions.cards.ron  old-def.ron  trade_cards.ron
assets/maps/: 1.xcf  2.xcf  3.xcf  civilization.map.json  civilization.map.orig.ron  civilization.map.ron
assets/rules/: calamity_rules.txt
assets/textures/: dot.aseprite
assets/ui/: styles.ess
assets/ui/demo/: animation.html  button.html  card.html  menu.html
bevy_ui_builder/: Cargo.toml
bevy_ui_builder/src/: builder.rs  button_builder.rs  lib.rs
mobile/: Cargo.toml
mobile/src/: lib.rs
notes/: enhanced_input.md  outline.md
notes/archive/: TRADE_UI_PROGRESS.md
notes/rules/: 001.sequence-of-play.md  01.all-rules-before-phases.md  02.taxation.md  03.population-expansion.md  04.census.md  05.ship-construction.md  06.movement.md  07.conflict.md  08.city-construction.md  09.removal-of-surplus-population.md  10.acquisition-of-trade-cards.md  11.trade.md  12.resolution-of-calamities.md  13.acquisition-of-civilization-cards.md  14.movement-of-markers-on-the-ast.md  15.winning-the-game.md  calamity_rules.txt
src/: audio.rs  civilization.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  test_utils.rs
src/actions/: mod.rs
src/civilization/: census.rs  civ.rs  game_phases.rs  mod.rs  movement.rs  population_expansion.rs
src/civilization/census/: census_plugin.rs  census_resources.rs  census_systems.rs  components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/civilization/cities/: components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/civilization/city_construction/: city_construction_components.rs  city_construction_events.rs  city_construction_plugin.rs  city_construction_systems.rs  mod.rs  plugin.rs  systems.rs
src/civilization/city_support/: city_support_components.rs  city_support_events.rs  city_support_plugin.rs  city_support_systems.rs  mod.rs  plugin.rs
src/civilization/components/: game_moves_components.rs  mod.rs  population.rs  trade_card_components.rs  trade_components.rs  trade_resources.rs
src/civilization/concepts/: mod.rs
src/civilization/conflict/: components.rs  conflict_components.rs  conflict_functions.rs  conflict_plugin.rs  conflict_systems.rs  conflict_triggers.rs  mod.rs  plugin.rs  systems.rs
src/civilization/console/: build_city_command.rs  build_city_console_command.rs  commands.rs  console_commands.rs  eliminate_city_command.rs  end_move_command.rs  expand_population_command.rs  list_builds_command.rs  list_moves_command.rs  make_a_move_command.rs  mod.rs  move_command.rs  player_end_building_command.rs  show_board_command.rs  start_command.rs  stupid_ai_command.rs
src/civilization/enums/: general_enums.rs  mod.rs  trade_card_enums.rs
src/civilization/events/: city_support_events.rs  game_moves_events.rs  mod.rs  movement_events.rs
src/civilization/functions/: conflict_functions.rs  general_functions.rs  mod.rs
src/civilization/game_moves/: components.rs  game_moves_components.rs  game_moves_events.rs  game_moves_plugin.rs  game_moves_systems.rs  game_moves_triggers.rs  mod.rs  plugins.rs  systems.rs  triggers.rs
src/civilization/game_phases/: game_activity.rs  mod.rs  plugin.rs  systems.rs
src/civilization/general/: components.rs  enums.rs  events.rs  general_components.rs  general_enums.rs  general_events.rs  general_functions.rs  general_plugin.rs  general_systems.rs  general_triggers.rs  mod.rs  plugin.rs  systems.rs
src/civilization/general_systems/: mod.rs
src/civilization/map/: map_plugin.rs  mod.rs
src/civilization/movement/: components.rs  events.rs  mod.rs  movement_components.rs  movement_events.rs  movement_plugin.rs  movement_systems.rs  plugin.rs  systems.rs
src/civilization/plugins/: belly_ui_plugin.rs  bevy_ui_plugin.rs  census_plugin.rs  city_construction_plugin.rs  city_support_plugin.rs  civilization_input_plugin.rs  civilization_plugin.rs  conflict_plugin.rs  game_moves_plugin.rs  general_plugin.rs  (+9 more)
src/console/: commands.rs
src/stupid_ai/: mod.rs  plugin.rs  stupid_ai_components.rs  stupid_ai_events.rs  stupid_ai_plugin.rs  stupid_ai_systems.rs  stupid_ai_triggers.rs
tests/: city_support.rs  city_support_tests.rs  conflict.rs  conflict_tests.rs  game_moves_tests.rs  mod.rs  movement.rs  movement_specs.rs  movement_tests.rs  population_expansion_specs.rs  remove_surplus.rs  remove_surplus_tests.rs  testy.rs  trade_tests.rs  two_player_game.rs  two_player_game_tests.rs
tests/common/: mod.rs
tests/concepts/: city_support_tests.rs  conflict_tests.rs  mod.rs  movement_tests.rs  player_trading_card_tests.rs  population_expansion_tests.rs  remove_surplus_tests.rs  succession_tests.rs  trade_tests.rs  two_player_game_tests.rs
tests/general_components/: mod.rs
tests/integration/: two_player_game.rs
tests/stupid_ai/: mod.rs
(+194 files in other folders)
