cargo-features = ["codegen-backend"]

[package]
name = "adv_civ"
version = "0.1.0"
publish = false
authors = ["Tommie Nygren <tommie.nygren@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# [workspace]
# members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
debug = 2
codegen-backend = "cranelift"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_state",
    "bevy_color",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "smaa_luts",
    "default_font",
    "webgl2",
    "sysinfo_plugin",
] }
bevy_kira_audio = { version = "0.20.0" }
bevy_asset_loader = { version = "0.21.0", features = ["2d"] }
rand = { version = "0.9.0" }
webbrowser = { version = "1.0.1", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30.5", default-features = false }
image = { version = "0.25.2", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4.22", features = ["max_level_debug", "release_max_level_warn"] }

itertools = "0.14.0"
#bevy_console = "0.12.1"
clap = { version = "4.5.16", features = ["derive"] }
bevy_egui = "0.30.1"
#bevy-inspector-egui = "0.25.2"
bevy_common_assets = { version = "0.12.0", features = ["ron"] }
serde = { version = "1.0.197", features = ["derive"] }
ron = "0.8.1"
bevy_hui = "0.3.0"

[build-dependencies]
embed-resource = "1.8.0"
