# This line needs to come before anything else in Cargo.toml
#cargo-features = ["codegen-backend"]

[package]
name = "adv_civ" # ToDo
version = "0.1.0"
publish = false
authors = ["Tommie Nygren <tommie.nygren@gmail.com>"] 
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[lib]
name = "adv_civ"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
#codegen-backend = "cranelift"

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]
test-utils = []

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["2d", "ui", "experimental_bevy_feathers", "bevy_gizmos", "debug"] }
bevy_kira_audio = { version = "0.25.0", features = ["android_shared_stdcxx"] }
bevy_asset_loader = { version = "0.25.0" }
rand = { version = "0.10.0-rc.8" }
webbrowser = { version = "1", features = ["hardened"] }
    
# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25.9", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4.29", features = ["max_level_debug", "release_max_level_warn"] }
itertools = "0.14.0"
serde_json = { version = "1.0.145" }
serde = { version = "1.0.228", features = ["derive"] }
ron = "0.12.0"
bevy_common_assets = { version = "0.15.0", features = ["ron"] }
lava_ui_builder = { path = "lava_ui_builder" }
bevy_enhanced_input = "0.23.2"
bevy_prototype_lyon = "0.16.0"
enumflags2 = {version =  "0.7.12", features = ["serde"] }

[build-dependencies]
embed-resource = "1"

[dev-dependencies]
pretty_assertions = "1"
adv_civ = { path = ".", features = ["test-utils"] }

[lints.clippy]
too_many_arguments = "allow"
